// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customfields shoulg match snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="name"
    >
      Дополнительные поля 
      <button
        class="small button normal dropdown"
      >
        <img
          src="test-file-stub"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`customfields shoulg match snapshot 2`] = `
<DocumentFragment>
  <div>
    <div
      class="name"
    >
      Дополнительные поля 
      <button
        class="small button normal dropdown"
      >
        <img
          src="test-file-stub"
        />
      </button>
    </div>
    <div
      class="inline"
    >
      <div
        class="half value"
      >
        child1Sex
      </div>
      <div
        class="half value"
      >
        <span
          class="neutral"
        >
          Пусто
        </span>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half value"
      >
        clearTestClient
      </div>
      <div
        class="half value"
      >
        <span
          class="neutral"
        >
          Пусто
        </span>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half value"
      >
        isCompany
      </div>
      <div
        class="half value"
      >
        true
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half value"
      >
        multiline
      </div>
      <div
        class="half value"
      >
        <div>
          1
        </div>
        <div>
          2
        </div>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half value"
      >
        singleline
      </div>
      <div
        class="half value"
      >
        <div>
          56
        </div>
        <div>
          <span
            class="neutral"
          >
            Пусто
          </span>
        </div>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half value"
      >
        walletCardLink
      </div>
      <div
        class="half value"
      >
        <span
          class="neutral"
        >
          Пусто
        </span>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half value"
      >
        walletCardQrCodeLink
      </div>
      <div
        class="half value"
      >
        <span
          class="neutral"
        >
          Пусто
        </span>
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half value"
      >
        walletCardSubscription
      </div>
      <div
        class="half value"
      >
        false
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`customfields shoulg match snapshot 3`] = `
<DocumentFragment>
  <div>
    <div
      class="name"
    >
      Дополнительные поля 
      <button
        class="small button normal dropdown"
      >
        <img
          src="test-file-stub"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
